[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bonner-caching"
description = "Bonner Lab utilities for caching function outputs to disk"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Raj Magesh Gauthaman", email = "rgautha1@jh.edu"}
]
keywords = [
    "Bonner Lab",
    "cache",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
urls = {repository = "https://github.com/BonnerLab/bonner-caching"}
dependencies = [
    "numpy",
    "xarray",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["sphinx"]
dev = ["black", "mypy"]
